<resources>
    <string name="app_name">Choco-Bitcoin</string>
    <string name="info">Info</string>
    <string name="history">History</string>
    <string name="transaction_history">Transaction History</string>
    <string name="exchange">Exchange</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="number">No</string>
    <string name="equal">=</string>

    <string name="loading">Loading…</string>
    <string name="id">id:</string>
    <string name="select_currency">Select Currency: </string>
    <string name="_1_bch">1 BCH =</string>

    <string-array name="currency" translatable="false">
        <item>USD</item>
        <item>EUR</item>
        <item>KZT</item>
    </string-array>

    <string-array name="months_name">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="days_name">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>

    <string-array name="weeks">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>
