<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.InfoFragment">

    <TextView
        android:id="@+id/spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_currency"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinner"
        app:layout_constraintBottom_toTopOf="@id/bitcoin_label"
        app:layout_constraintVertical_bias="0.128"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bitcoin_label"
        app:layout_constraintStart_toEndOf="@id/spinner_label"
        app:layout_constraintTop_toTopOf="parent"
        android:entries="@array/currency"
        android:layout_marginStart="5dp"
        app:layout_constraintBaseline_toBaselineOf="@id/spinner_label"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/bitcoin_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/_1_bch"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintEnd_toStartOf="@id/tv_bitcoin_currency"
        app:layout_constraintBottom_toTopOf="@id/line_chart"
        />

    <TextView
        android:id="@+id/tv_bitcoin_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@id/bitcoin_label"
        app:layout_constraintTop_toBottomOf="@id/spinner"
        app:layout_constraintBottom_toTopOf="@id/line_chart"
        app:layout_constraintStart_toEndOf="@id/bitcoin_label"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_bitcoin_currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_week"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />

    <Button
        android:id="@+id/btn_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        android:background="@drawable/button_background"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_month"
        app:layout_constraintTop_toBottomOf="@id/line_chart"
        />

    <Button
        android:id="@+id/btn_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_white_background"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_week"
        app:layout_constraintStart_toEndOf="@id/btn_week"
        app:layout_constraintEnd_toStartOf="@id/btn_year"
        app:layout_constraintTop_toBottomOf="@id/line_chart"
        />

    <Button
        android:id="@+id/btn_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_white_background"
        app:layout_constraintBaseline_toBaselineOf="@id/btn_week"
        app:layout_constraintStart_toEndOf="@id/btn_month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_chart"
        />



</android.support.constraint.ConstraintLayout>